Atualizações no HTML.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>GBRL TV</title>
 </head>
 
@@ -17,7 +17,7 @@
         </header>
 
         <h2>
-            Precisa de uma recomendação de algo para assistir?
+            Precisa de recomendações do que assistir?
         </h2>
         <h4>Seja pra ver sozinho, com o seu amor ou até um grupo de amigos, selecionamos essa lista de séries e filmes
             que você pode gostar de maratonar na TV!
@@ -35,28 +35,38 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
         </div>
+        <div class="sobresuzume">
+            <h2>Sobre Suzume</h2>
+            <h4>Do mesmo criador de Your Name, Suzume no Tojimari acompanha dois amantes desafortunatos. Suzume, uma
+                garota de 17 anos que vive em uma pacata cidade em Kyushu, conhece um jovem em uma jornada “procurando
+                portas”. Ela o segue até um prédio em ruínas nas montanhas e encontra uma porta, como se "só ela" fosse
+                salva da devastação. Suzume se sente atraída por um poder invisível e estende a mão para a porta. Logo,
+                portas em todo o Japão começam a se abrir uma após a outra. As portas que se abriram devem ser fechadas
+                para fechar a calamidade que jaz do outro lado. Agora, começa a "jornada de fechar portas" de Suzume.
+            </h4>
+        </div>
     </section>
-    
+
     <section>
         <h2>Relacionados</h2>
         <div class="relsuzume">
             <a href="https://www.youtube.com/watch?v=nqAxRJhUT3k">
-                <img src="https://img.youtube.com/vi/nqAxRJhUT3k/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/nqAxRJhUT3k/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=70NhEBzLKU8">
-                <img src="https://img.youtube.com/vi/70NhEBzLKU8/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/70NhEBzLKU8/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=Guxx_KTm_6M">
-                <img src="https://img.youtube.com/vi/Guxx_KTm_6M/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/Guxx_KTm_6M/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=O0D4hdRELJ8">
-                <img src="https://img.youtube.com/vi/O0D4hdRELJ8/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/O0D4hdRELJ8/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=_grmduuECm4">
-                <img src="https://img.youtube.com/vi/_grmduuECm4/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/_grmduuECm4/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=b_ePl3_RpJ0">
-                <img src="https://img.youtube.com/vi/b_ePl3_RpJ0/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/b_ePl3_RpJ0/maxresdefault.jpg" />
             </a>
 
         </div>
