Atualizações no index.html

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         </h4>
     </div>
     </section>
-    <section class="suzume">
-        <div class="txtsuzume">
+    <section class="filmes">
+        <div class="txtfilmes">
             <h2>Suzume:</h2>
         </div>
-        <div class="vidsuzume">
+        <div class="vidfilmes">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/F7nQ0VUAOXg?si=2bHIwB0ocnyDhrpR"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
         </div>
-        <div class="sobresuzume">
+        <div class="sobre">
             <h2>Sobre Suzume</h2>
             <h4>Do mesmo criador de Your Name, Suzume no Tojimari acompanha dois amantes desafortunatos. Suzume, uma
                 garota de 17 anos que vive em uma pacata cidade em Kyushu, conhece um jovem em uma jornada “procurando
@@ -48,8 +48,8 @@
     </section>
 
     <section>
-        <h2>Relacionados</h2>
-        <div class="relsuzume">
+        <h2>Mais em relacionados:</h2>
+        <div class="relacionados">
             <a href="https://www.youtube.com/watch?v=nqAxRJhUT3k">
                 <img src="https://img.youtube.com/vi/nqAxRJhUT3k/maxresdefault.jpg" />
             </a>
@@ -67,6 +67,54 @@
             </a>
             <a href="https://www.youtube.com/watch?v=b_ePl3_RpJ0">
                 <img src="https://img.youtube.com/vi/b_ePl3_RpJ0/maxresdefault.jpg" />
+            </a>
+
+        </div>
+    </section>
+
+
+    <section class="filmes">
+        <div class="txtfilmes">
+            <h2>Interestelar:</h2>
+        </div>
+        <div class="vidfilmes">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hHBsKHVLAYc?si=11oircBzMipOLf_r"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="sobre">
+            <h2>Sobre Interestelar</h2>
+            <h4>Após ver a Terra consumindo boa parte de suas reservas naturais, um grupo de astronautas recebe a missão
+                de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da
+                espécie. Cooper (Matthew McConaughey) é chamado para liderar o grupo e aceita a missão sabendo que pode
+                nunca mais ver os filhos. Ao lado de Brand (Anne Hathaway), Jenkins (Marlon Sanders) e Doyle (Wes
+                Bentley), ele seguirá em busca de uma nova casa. Com o passar dos anos, sua filha Murph (Mackenzie Foy e
+                Jessica Chastain) investirá numa própria jornada para também tentar salvar a população do planeta.
+            </h4>
+        </div>
+    </section>
+
+    <section>
+        <h2>Mais em relacionados</h2>
+        <div class="relacionados">
+            <a href="https://www.youtube.com/watch?v=46FXVu9foqo">
+                <img src="https://img.youtube.com/vi/46FXVu9foqo/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=isWwUJf4KEA">
+                <img src="https://img.youtube.com/vi/isWwUJf4KEA/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=zCSjjmQz9-o">
+                <img src="https://img.youtube.com/vi/zCSjjmQz9-o/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=n9xhJrPXop4">
+                <img src="https://img.youtube.com/vi/n9xhJrPXop4/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Way9Dexny3w">
+                <img src="https://img.youtube.com/vi/Way9Dexny3w/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=R_VX0e0PX90">
+                <img src="https://img.youtube.com/vi/R_VX0e0PX90/maxresdefault.jpg" />
             </a>
 
         </div>
